...
      })}>
      <Tab.Screen name="Home" component={HomeScreen} options={{ testID: 'homeTabScreen', tabBarLabel: 'Dashboard' }} />
      <Tab.Screen name="Courses" component={CourseStack} options={{ tabBarLabel: 'Your Courses' }} />
      <Tab.Screen
        name="Syllables"
        component={SyllableCheckerScreen}
        options={{tabBarLabel: 'Syllable Stress'}}
      />
      <Tab.Screen
        name="Logout"
        component={LogoutScreen}
        options={{ tabBarLabel: 'Sign Out' }}
        listeners={{
...
